Fix action alignment on checkout page

--- a/app/assets/stylesheets/lending/item.scss
+++ b/app/assets/stylesheets/lending/item.scss
@@ -66,6 +66,7 @@ section {
 
           &.action {
             grid-column: 2;
+            text-align: left;
           }
         }
 
